# utdf2gmns

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  Readme.md  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_readthedocs.txt  setup.py  tutorial_utdf2gmns.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  task.yml
.github/workflows/: build_wheels.yml  draft-pdf.yml  pylint.yml  pytest.yml  python-package.yml
datasets/ADOT_Synchro_Network/Central Region/: Glendale.csv  Glendale.syn  Peoria.syn  Phoenix_35th_51_th.csv  Phoenix_Apache Trail(Old US60).csv  Phoenix_Apache Trail(Old US60).syn
datasets/ADOT_Synchro_Network/Northern Region/: Bullhead Parkway SR95_PM1.csv  Bullhead Parkway SR95_PM1.syn  Camp Verde AZ.csv  Camp Verde AZ.syn  Kingman AZ.csv  Kingman AZ.syn  Lake Havasu AZ 2021-09-14.csv  Lake Havasu AZ 2021-09-14.syn  Parker AZ.csv  Parker AZ.syn  Payson AZ.csv  Payson AZ.syn  Springerville AZ.csv  Springerville AZ.syn
datasets/ADOT_Synchro_Network/Southern Region/: Cortaro PM Peak 1 Weekday.csv  Cortaro PM Peak 1 Weekday.syn  Cortaro-AM Peak 1  Weekday .csv  I-10 @ Cortaro AM Alt1.syn  I-10 @ Cortaro AM.csv  I-10 @ Cortaro AM.syn  I19_ruby (am) opt cor 110.csv  I19_ruby (am) opt cor 110.syn  I19_ruby (am) opt cor 120.csv  I19_ruby (am) opt cor 120.syn  I19_ruby (mid day) opt cor 130.csv  I19_ruby (mid day) opt cor 130.syn  Pinal 63 Acres_WestYear 2028 Build PM Peak Hour.csv  Pinal 63 Acres_WestYear 2028 Build PM Peak Hour.syn
datasets/Sedona/: Sedona SR 89A 8-28-23 Optimized.csv  Sedona SR 89A 9-19-23 Optimized UTDF.csv  coord_node.csv
datasets/Sedona/utdf_to_sumo/: EdgeData.xml  utdf_to_sumo.add.xml  utdf_to_sumo.con.xml  utdf_to_sumo.edg.xml  utdf_to_sumo.flow.xml  utdf_to_sumo.net.xml  utdf_to_sumo.nod.xml  utdf_to_sumo.rou.xml  utdf_to_sumo.sumocfg
datasets/Signa-x/UTDF2GMNS ver3.3/: Node_11_111th Ave_Grand Ave.xlsm  Node_13_Thompson Ranch Rd_Grand Ave.xlsm  Node_17_Verde St_Greenway Rd.xlsm  Node_1_99th Ave_Grand Ave.xlsm  Node_21_Dysart Rd_Grand Ave.xlsm  Node_25_113th Ave_Grand Ave.xlsm  Node_26_Towne Center Dr_Grand Ave.xlsm  Node_27_Litchfield Rd_Grand Ave.xlsm  Node_28_Bell Grande Dr_Grand Ave.xlsm  Node_31_Mountain View Blvd_Grand Ave.xlsm  Node_33_Parkview Pl_Grand Ave.xlsm  Node_34_Meeker Blvd_Grand Ave.xlsm  Node_36_RH Johnson Blvd_Grand Ave.xlsm  Node_39_303 NB Ramps_Grand Ave.xlsm  Node_44_163rd Ave_Grand Ave.xlsm  Node_46_West-Mec Ave_Grand Ave.xlsm  Node_49_Primrose St_Grand Ave.xlsm  Node_7_Del Webb Blvd_Grand Ave.xlsm  Node_9_103rd Ave_Grand Ave.xlsm  Readme.txt  Sigma-X_UTDF.xlsm  UTDF2GMNS.xlsm  UTDF8.csv  signal_phase.csv  signal_phase_concurrency.csv  signal_timing.csv  signal_timing_plan.csv  sim_timing.csv
datasets/Signa-x/UTDF2GMNS ver4 estimate timing/: Readme.txt  Sigma-X_UTDF.xlsm  UTDF2GMNS.xlsm  UTDF8.csv
datasets/Synchro_Network/Peoria/: Peoria.csv
datasets/chattnooga/: UTDF.csv
datasets/chattnooga/utdf_to_gmns/: link.csv  node.csv  signal.json  utdf_lanes.csv  utdf_links.csv  utdf_network.csv  utdf_nodes.csv  utdf_phases.csv  utdf_timeplans.csv
datasets/chattnooga/utdf_to_sumo/: EdgeData.xml  NULL  output_loop_detector_202504231701.xml  trips.trips.xml  utdf_to_sumo.con.xml  utdf_to_sumo.detector.xml  utdf_to_sumo.edg.lane.xml  utdf_to_sumo.edg.xml  utdf_to_sumo.flow.xml  utdf_to_sumo.net.xml  utdf_to_sumo.nod.xml  utdf_to_sumo.rou.xml  utdf_to_sumo.sumocfg  utdf_to_sumo.turn.xml
datasets/data_Tempe_network/utdf_to_gmns/: lane.csv  link.csv  movement.csv  node.csv  signal.json  utdf_links.csv  utdf_nodes.csv
datasets/data_Tempe_network/utdf_to_gmns_signal_ints/: Node_101_College_Continental.xlsm  Node_102_River Drive_Broadway Road.xlsm  Node_103_Price Freeway SB_Broadway Road.xlsm  Node_104_Priest Drive_Fountainhead Pkwy.xlsm  Node_105_Priest Drive_Fairmont Dr.xlsm  Node_106_Rural Road_Broadmor Drive.xlsm  Node_107_48th Street_Cotton Center Blvd.xlsm  Node_108_48th Street_Alameda Dr.xlsm  Node_109_Priest Drive_Alameda Dr.xlsm  Node_10_Scottsdale Road_Curry Rd.xlsm  Node_110_Hardy_Alameda Dr.xlsm  Node_111_Mill Avenue_Alameda Dr.xlsm  Node_113_Rural Road_Alameda Dr.xlsm  Node_114_McClintock Drive_Alameda Drive.xlsm  Node_115_McClintock Drive_Campus Drive.xlsm  Node_116_McClintock Drive_Del Rio Drive.xlsm  Node_117_Mill Avenue_Broadmor Dr.xlsm  Node_118_48th Street_Southern Ave.xlsm  Node_119_Potter_Southern Ave.xlsm  Node_11_Miller_Curry Rd.xlsm  Node_120_Priest Drive_Southern Ave.xlsm  (+212 more)
datasets/data_bullhead_seg4/: UTDF.txt
docs/: CITATION.cff  SECURITY.md
docs/paper/: 2024-10-17_Word-template-TIB-Open-Publishing-Conference-OTH.docx  UTDF2GMNS_An Open-Source Python Implementation for Converting Synchro UTDF with Signalized Intersections to SUMO using GMNS Standard.docx  XL_Automating Traffic Microsimulation From UTDF To SUMO.docx  framework.drawio  utdf2gmns_general modeling network specification_from Synchro to SUMO.docx  ~$UTDF2GMNS An Open-Source Tool for Creating GMNS Networks with Signalized Intersections.pptx  ~$_Automating Traffic Microsimulation From UTDF To SUMO_20250408.docx
docs/source/: conf.py  index.rst
docs/tes_script/: phase_mapping.py  synchro_parser.py  synchro_sumo_id_mapping.py
paper/: paper.bib  paper.md
src/: generate_intersection_from_UTDFCombined.py
tests/: test_UTDF2GMNS_class.py  test_gmns_turn_bay.py  test_pkg_utils.py  test_plot_net.py  test_remove_u_turn.py  test_sumo2geojson.py  test_sumo_signal_mapping.py  test_sumo_turn_bay.py
tutorials/: crate_gmns_netowork.py  tutorial_utdf2gmns.py
utdf2gmns/: __init__.py  _utdf2gmns.py  pkg_configs.py  pkg_settings.py  pkg_utils.py  utdf2gmns.py
utdf2gmns/engine/: __init__.py
utdf2gmns/func_lib/: __init__.py  geocoding_Links.py  geocoding_Nodes.py  geocoding_intersection.py  gmns2sumo.py  match_node_intersection_movement_utdf.py  plot_net.py  read_sumo.py  read_utdf.py  signal_intersections.py  signal_mapping.py  signalized_intersections.py
utdf2gmns/util_lib/: __init__.py  pkg_settings.py  pkg_utils.py
(+297 files in other folders)
