[build-system]
requires = ["setuptools", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "utdf2gmns"
version = "1.0.1"
description = "Convert Synchro UTDF data format to other formats, such as GMNS, SUMO, etc..."
authors = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
    {name = "Xuesong Simon Zhou", email = "xzhou74@asu.edu"},
]
maintainers = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

readme = {file = 'README.md', content-type='text/markdown'}
license = {file = 'LICENSE', content-type='text/plain'}
# license = {text = "Apache License"}

requires-python = ">=3.10"
keywords = ["UTDF", "Synchro", "GMNS", "SUMO", "Geojson", "Micro Simulation"]

dynamic = ["dependencies"]

[project.optional-dependencies]
base = ["pyproj>=3.7.0", "geocoder>=1.38.1", "geopandas>=1.0.1", "geopy>=2.4.1", "Shapely>=2.0.7",
         "xlwings>=0.33.9"] # for the core functionality
vis = ["keplergl", "matplotlib>=3.10.0"]
test = ["pytest", "coverage"]
sumo = ["sumolib"]
all = ["my-package[base, vis, test, sumo]"]

[project.urls]
Homepage = 'https://github.com/xyluo25/utdf2gmns'
# Documentation = 'https://github.com/xyluo25/grid2demand'
# Bug_Tracker = 'https://github.com/xyluo25/grid2demand/issues'
# Repository = "https://github.com/xyluo25/grid2demand"
# Download = "https://www.pepy.tech/projects/pyufunc"

#         # 'Publication': '',
#         # 'Citation': '',
#         # 'Acknowledgement': '',
#         # 'FAQs': '',

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {file = ["requirements_dev.txt"]}

[tool.setuptools]
py-modules = []
package-data = {'utdf2gmns' = ['*.txt', '*.xls', '*.xlsx', '*.csv'], "test_data" = ['*.xls']}

# [tool.setuptools.packages.find]
# where = ["utdf2gmns"]

# [tool.setuptools.package-data]
# utdf2gmns = ['*.txt', '*.xls', '*.xlsx', '*.csv']
