[build-system]
requires = ["setuptools", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "utdf2gmns"
version = "1.1.3"
description = "Convert Synchro UTDF data format to other formats, such as GMNS, SUMO, etc..."
authors = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
]
maintainers = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

readme = {file = 'README.md', content-type='text/markdown'}
license-files = ['LICENSE']

requires-python = ">=3.10"
keywords = ["Synchro UTDF", "GMNS", "SUMO", "Conversion", "Traffic Microsimulation", "Visualization"]

dynamic = ["dependencies"]

[project.optional-dependencies]
base = ["pandas", "pyufunc", "pyproj>=3.7.0", "geocoder>=1.38.1", "geopandas>=1.0.1", "geopy>=2.4.1", "Shapely>=2.0.7",
         "xlwings>=0.33.9", "sumolib", "keplergl", "matplotlib>=3.10.0"] # for the core functionality
# vis = ["keplergl", "matplotlib>=3.10.0"]
test = ["pytest", "coverage", "sphinx", "myst-parser", "sphinx_copybutton"]
all = ["utdf2gmns[base, test]"]

[project.urls]
Homepage = 'https://github.com/xyluo25/utdf2gmns'
Documentation = 'https://utdf2gmns.readthedocs.io/en/latest/'
"Bug Tracker" = 'https://github.com/xyluo25/utdf2gmns/issues'
Download = "https://www.pepy.tech/projects/utdf2gmns"

#         # 'Publication': '',
#         # 'Citation': '',
#         # 'Acknowledgement': '',
#         # 'FAQs': '',

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {file = ["requirements_dev.txt"]}

[tool.setuptools]
py-modules = []
package-data = {'utdf2gmns' = ['*.txt', '*.xls', '*.xlsx', '*.csv'], "test_data" = ['*.xls']}

# [tool.setuptools.packages.find]
# where = ["utdf2gmns"]

# [tool.setuptools.package-data]
# utdf2gmns = ['*.txt', '*.xls', '*.xlsx', '*.csv']
